--- a/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.html
+++ b/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.html
@@ -280,6 +280,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="hasObservers(p: PubSubPeer): bool">hasObservers(p: PubSubPeer): bool</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">hasSendConn
+      <li><a class="reference" href="#hasSendConn%2CPubSubPeer"
+    title="hasSendConn(p: PubSubPeer): bool">hasSendConn(p: PubSubPeer): bool</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">new
       <li><a class="reference" href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2COnEvent%2Cstring%2Cint"
     title="new(T: typedesc[PubSubPeer]; peerId: PeerId; getConn: GetConn; onEvent: OnEvent;
@@ -549,6 +554,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="hasSendConn,PubSubPeer" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#hasSendConn%2CPubSubPeer"><span class="Identifier">hasSendConn</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L224"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L224" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="new,typedesc[PubSubPeer],PeerId,GetConn,OnEvent,string,int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2COnEvent%2Cstring%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">getConn</span><span class="Other">:</span> <a href="pubsubpeer.html#GetConn"><span class="Identifier">GetConn</span></a><span class="Other">;</span>
          <span class="Identifier">onEvent</span><span class="Other">:</span> <a href="pubsubpeer.html#OnEvent"><span class="Identifier">OnEvent</span></a><span class="Other">;</span> <span class="Identifier">codec</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">maxMessageSize</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
@@ -557,9 +574,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L286"
+href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L289"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L286" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L289" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -582,9 +599,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L264"
+href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L267"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L264" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L267" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -596,9 +613,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L231"
+href="https://github.com/status-im/nim-libp2p/tree/upgraderefacto/libp2p/protocols/pubsub/pubsubpeer.nim#L234"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L231" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L234" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -646,7 +663,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-25 15:26:01 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-25 16:42:25 UTC</small>
       </div>
     </div>
   </div>
